--- a/src/index.html
+++ b/src/index.html
@@ -13,16 +13,15 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+    <div
+      class="container d-flex justify-content-center align-items-center vh-100"
+    >
+      <div class="card poker-card text-center">
+        <div class="card-body">
+          <div id="top-suit" class="card-suit top-suit">&clubs;</div>
+          <div id="number" class="card-number">A</div>
+          <div id="bottom-suit" class="card-suit bottom-suit">&clubs;</div>
+        </div>
       </div>
     </div>
   </body>
